<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".ui.booking.BookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="200dp"
                        android:layout_gravity="start|top"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtsa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/booking"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/desc_book"
                            android:textColor="@color/dark_grey"
                            android:textSize="16sp" />

                    </LinearLayout>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/room_select"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textColorHint="@color/light_grey"
                            android:background="@drawable/spinner_border"
                            android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"

                        android:layout_marginVertical="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/pilih_divisi"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/select_division"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_division"
                            android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
                            android:drawablePadding="20dp"
                            android:padding="12dp"
                            android:textColorHint="@color/light_grey"
                            android:hint="@string/pilih_divisi"
                            android:textColor="@android:color/black"
                            tools:ignore="MissingConstraints" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/pilih_tanggal"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/editTextDate"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/spinner_border"
                            android:focusable="false"
                            android:hint="@string/pilih_tanggal"
                            android:textColorHint="@color/light_grey"
                            android:paddingStart="10dp"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"

                        android:layout_marginVertical="15dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="35dp"
                            android:layout_weight="1"

                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/waktu_mulai"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <EditText
                                android:id="@+id/editTextTime"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/spinner_border"
                                android:focusable="false"
                                android:hint="@string/mulai"
                                android:textColorHint="@color/light_grey"
                                android:paddingStart="10dp"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35dp"
                            android:layout_weight="1"

                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/waktu_selesai"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <EditText
                                android:id="@+id/editTextTime1"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/spinner_border"
                                android:focusable="false"
                                android:hint="@string/selesai"
                                android:paddingStart="10dp"
                                android:textColorHint="@color/light_grey"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/keterangan"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/dsc_book"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@drawable/bg_textfield"
                            android:hint="@string/keterangan"
                            android:padding="16dp"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            android:textColorHint="@color/light_grey"
                            android:textSize="16sp"
                            android:scrollbars="vertical"
                            android:overScrollMode="always" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_book"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/booking"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:cornerRadius="10dp" />

                </LinearLayout>
            </FrameLayout>


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadingProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:indicatorSize="48dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
